--- a/Project/line/app/src/main/res/layout/activity_bootom_navigation.xml
+++ b/Project/line/app/src/main/res/layout/activity_bootom_navigation.xml
@@ -48,6 +48,20 @@
         app:layout_constraintVertical_bias="1.0"
         tools:visibility="visible" />
 
+    <com.ssynhtn.waveview.WaveView
+        android:id="@+id/wave_three"
+        android:layout_width="0dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="8dp"
+        android:animateLayoutChanges="true"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/nav_view"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/nav_host_fragment_activity_bootom_navigation"
+        app:layout_constraintVertical_bias="1.0"
+        tools:visibility="visible" />
+
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
