--- a/Project/line/app/src/main/res/layout/activity_bootom_navigation.xml
+++ b/Project/line/app/src/main/res/layout/activity_bootom_navigation.xml
@@ -38,6 +38,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
+        android:visibility="gone"
         android:animateLayoutChanges="true"
         app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
