--- a/Project/line/app/src/main/res/values/colors.xml
+++ b/Project/line/app/src/main/res/values/colors.xml
@@ -7,4 +7,48 @@
     <color name="teal_700">#B30641</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="colorSafezoneText">#e20074</color>
+    <color name="bg">#f9f9f9</color>
+    <color name="main">#dd1974</color>
+    <color name="main_transparent">#66dd1974</color>
+    <color name="blackish">#323232</color>
+    <color name="greenish">#09b119</color>
+    <color name="greyish">#cccccc</color>
+    <color name="darkGreyish">#999999</color>
+    <color name="itemSeperator">#d8d8d8</color>
+    <color name="darkGrey">#808080</color>
+    <color name="darkerGrey">#666666</color>
+    <color name="redish">#ff3641</color>
+    <color name="yellowish">#ffbc00</color>
+    <color name="light">#f0f0f0</color>
+    <color name="group">#EFEFF4</color>
+    <color name="transparent">#00000000</color>
+    <color name="greyTint">#808080</color>
+    <color name="chartGrey">#b3b3b3</color>
+    <color name="lightGrey">#dedede</color>
+    <color name="chartPink">#e696c0</color>
+    <color name="chartYellow">#ffe83a</color>
+    <color name="chartBlue">#004b64</color>
+    <color name="separator">#e6e6e6</color>
+    <color name="polyline">#00779c</color>
+    <color name="safezone">#6fe1b0</color>
+    <color name="tempCold">#89cefc</color>
+    <color name="tempNormal">#78d804</color>
+    <color name="tempHot">#ff3641</color>
+    <color name="passwordHint">#bcbaba</color>
+    <color name="black50PercentOpacity">#80000000</color>
+    <color name="black78PercentOpacity">#C7000000</color>
+    <color name="black90PercentOpacity">#D9000000</color>
+    <color name="black99PercentOpacity">#99000000</color>
+    <color name="divider">#b0b0b0</color>
+    <color name="brownishGrey">#666666</color>
+    <color name="neonGreen">#00F43D</color>
+    <color name="whiteSmoke">#f5f5f5</color>
+    <color name="black_54">#8B000000</color>
+    <color name="lavenderBlush">#EBC6DE</color>
+    <color name="pinkishGrey">#CCCCCC</color>
+    <color name="grey">#F2F2F2</color>
+    <color name="mic_enabled_color">#A7160C</color>
 </resources>
