--- a/Project/line/app/src/main/res/layout/activity_bootom_navigation.xml
+++ b/Project/line/app/src/main/res/layout/activity_bootom_navigation.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="?attr/actionBarSize">
-
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
         android:layout_width="0dp"
@@ -18,7 +17,6 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:menu="@menu/bottom_nav_menu" />
-
     <fragment
         android:id="@+id/nav_host_fragment_activity_bootom_navigation"
         android:name="androidx.navigation.fragment.NavHostFragment"
@@ -30,24 +28,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation" />
-
-    <TextView
-        android:id="@+id/editText_voiceInput"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="32dp"
-        android:visibility="gone"
-        android:animateLayoutChanges="true"
-        app:layout_constraintBottom_toTopOf="@+id/nav_view"
-        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nav_host_fragment_activity_bootom_navigation"
-        app:layout_constraintVertical_bias="1.0"
-        tools:visibility="visible" />
-
+    <!--
     <com.ssynhtn.waveview.WaveView
         android:id="@+id/wave_three"
         android:layout_width="0dp"
@@ -59,22 +40,35 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nav_host_fragment_activity_bootom_navigation"
         app:layout_constraintVertical_bias="1.0"
-        tools:visibility="visible" />
-
-
+        tools:visibility="visible" />-->
+    <!--
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:clickable="true"
+            app:layout_constraintBottom_toTopOf="@id/nav_view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/editText_voiceInput"
+            app:layout_constraintTop_toBottomOf="@+id/nav_host_fragment_activity_bootom_navigation"
+            app:layout_constraintVertical_bias="1.0"
+            app:srcCompat="@android:drawable/ic_btn_speak_now" />-->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="32dp"
         android:clickable="true"
-        app:layout_constraintBottom_toTopOf="@id/nav_view"
+        app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/editText_voiceInput"
-        app:layout_constraintTop_toBottomOf="@+id/nav_host_fragment_activity_bootom_navigation"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@android:drawable/ic_btn_speak_now" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.94"
+        app:srcCompat="@drawable/ic_message" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
