--- a/Project/line/app/src/main/res/values/themes.xml
+++ b/Project/line/app/src/main/res/values/themes.xml
@@ -14,19 +14,24 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="BottomSheetDialogTheme" parent="BaseBottomSheetDialog">
+    <!--<style name="BottomSheetDialogTheme" parent="BaseBottomSheetDialog">
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:navigationBarColor">@color/white</item>
-    </style>
+    </style>-->
 
-    <style name="BottomSheet" parent="@style/Widget.Design.BottomSheet.Modal">
+    <!--<style name="BottomSheet" parent="@style/Widget.Design.BottomSheet.Modal">
         <item name="android:background">@drawable/bg_bottom_sheet_dialog_fragment</item>
-    </style>
+    </style>-->
 
-    <style name="BaseBottomSheetDialog" parent="@style/Theme.Design.Light.BottomSheetDialog">
+  <!--  <style name="BaseBottomSheetDialog" parent="@style/Theme.Design.Light.BottomSheetDialog">
         <item name="android:windowIsFloating">false</item>
         <item name="bottomSheetStyle">@style/BottomSheet</item>
-    </style>
+    </style>-->
 
-    <style name="BottomSheetDialogTheme" parent="BaseBottomSheetDialog" />
+   <!-- <style name="BottomSheetDialogTheme" parent="BaseBottomSheetDialog" />-->
+
+    <style name="DialogAnimation">
+        <item name="android:windowEnterAnimation">@android:anim/slide_in_left</item>
+        <item name="android:windowExitAnimation">@android:anim/slide_out_right</item>
+    </style>
 </resources>
