color changes of chat view and bug fix on empty input using text

--- a/Project/line/app/src/main/res/layout/bottom_sheet.xml
+++ b/Project/line/app/src/main/res/layout/bottom_sheet.xml
@@ -5,16 +5,16 @@
     android:id="@+id/bottomSheetLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="20dp"
     android:background="@drawable/chat_baackground">
+
     <ImageView
         android:id="@+id/imageView_arrow_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="16dp"
+
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="24dp"
         android:enabled="false"
         android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/chatScrollView"
@@ -22,19 +22,18 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
         app:layout_constraintVertical_chainStyle="packed"
         app:srcCompat="@drawable/ic_baseline_close_24" />
+
     <androidx.core.widget.NestedScrollView
         android:id="@+id/chatScrollView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
         app:layout_constraintBottom_toTopOf="@+id/frame"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView_arrow_up">
 
         <LinearLayout
@@ -68,82 +67,85 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-    <com.ssynhtn.waveview.WaveView
-        android:id="@+id/wave_three"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginBottom="6dp"
-        android:animateLayoutChanges="true"
-        android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@+id/send_button_text"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
-    <EditText
-        android:id="@+id/edittext_chatbox"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="24dp"
-        android:background="@drawable/edittext_background"
-        android:hint="Enter message"
-        android:inputType="text"
-        android:maxLines="1"
-        android:paddingLeft="15dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:textColor="@color/black"
-        android:textColorHint="@color/pink200"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/send_button_text"
-        app:layout_constraintHorizontal_bias="0.97"
-        app:layout_constraintHorizontal_chainStyle="spread_inside"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/wave_three"
-        app:layout_constraintVertical_bias="1.0" />
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/send_button_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_margin="8dp"
-        android:layout_marginBottom="24dp"
-        android:background="@color/whiteSmoke"
-        android:backgroundTint="@color/white"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center"
-        android:src="@drawable/ic_baseline_send_24"
-        app:elevation="6dp"
-        app:fabSize="mini"
-        app:layout_constraintBottom_toBottomOf="@+id/edittext_chatbox"
-        app:layout_constraintEnd_toStartOf="@+id/send_button"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@id/edittext_chatbox"
-        app:layout_constraintTop_toTopOf="@+id/edittext_chatbox" />
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/send_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_margin="8dp"
-        android:layout_marginBottom="24dp"
-        android:background="@color/whiteSmoke"
-        android:backgroundTint="@color/white"
-        android:clickable="true"
-        android:enabled="false"
-        android:focusable="true"
-        android:gravity="center"
-        android:src="@drawable/ic_mic"
-        app:elevation="6dp"
-        app:fabSize="mini"
-        app:layout_constraintBottom_toBottomOf="@+id/edittext_chatbox"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/send_button_text"
-        app:layout_constraintTop_toTopOf="@+id/edittext_chatbox" />
+            <com.ssynhtn.waveview.WaveView
+                android:id="@+id/wave_three"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:layout_marginBottom="6dp"
+                android:animateLayoutChanges="true"
+                android:visibility="gone"
+                app:layout_constraintBottom_toTopOf="@+id/send_button_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:visibility="visible" />
+
+            <EditText
+                android:id="@+id/edittext_chatbox"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="16dp"
+                android:background="@drawable/edittext_background"
+                android:hint="Enter message"
+                android:inputType="text"
+                android:maxLines="1"
+                android:paddingLeft="15dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="10dp"
+                android:textColor="@color/black"
+                android:textColorHint="@color/pink200"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/send_button_text"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_chainStyle="spread"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/wave_three"
+                app:layout_constraintVertical_bias="1.0" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/send_button_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_margin="8dp"
+                android:layout_marginBottom="24dp"
+                android:background="@color/whiteSmoke"
+                android:backgroundTint="@color/white"
+                android:clickable="true"
+                android:enabled="false"
+                android:focusable="true"
+                android:gravity="center"
+                android:src="@drawable/ic_baseline_send_24"
+                app:elevation="6dp"
+                app:fabSize="auto"
+                app:layout_constraintBottom_toBottomOf="@+id/edittext_chatbox"
+                app:layout_constraintEnd_toStartOf="@+id/send_button"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@id/edittext_chatbox"
+                app:layout_constraintTop_toTopOf="@+id/edittext_chatbox" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/send_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_margin="8dp"
+                android:background="@color/whiteSmoke"
+                android:backgroundTint="@color/white"
+                android:clickable="true"
+                android:enabled="false"
+                android:focusable="true"
+                android:gravity="center"
+                android:src="@drawable/ic_mic"
+                app:elevation="6dp"
+                app:fabSize="auto"
+                app:layout_constraintBottom_toBottomOf="@+id/send_button_text"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/send_button_text"
+                app:layout_constraintTop_toTopOf="@+id/send_button_text" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -151,39 +153,29 @@
 
 
     <TextView
-    android:id="@+id/textView_Title"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="16dp"
-    android:layout_marginTop="34dp"
-    android:layout_marginEnd="16dp"
-    android:text="textView_Title"
-    android:textColor="@color/colorSafezoneText"
-    android:textSize="20sp"
-    android:visibility="gone"
-    app:layout_constraintBottom_toTopOf="@+id/textView_SubTitle"
-    app:layout_constraintEnd_toStartOf="@+id/imageView_arrow_up"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/textView_Title"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:textColor="@color/colorSafezoneText"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/textView_SubTitle"
+        app:layout_constraintEnd_toStartOf="@+id/imageView_arrow_up"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-    android:id="@+id/textView_SubTitle"
-    android:layout_width="0dp"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="16dp"
-    android:layout_marginTop="8dp"
-    android:layout_marginEnd="24dp"
-    android:layout_marginBottom="8dp"
-    android:text="TextView"
-    android:textColor="@color/blackish"
-    android:textSize="16sp"
-    android:visibility="gone"
-    app:layout_constraintBottom_toBottomOf="@+id/imageView_arrow_up"
-    app:layout_constraintEnd_toStartOf="@+id/imageView_arrow_up"
-    app:layout_constraintHorizontal_bias="0.0"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@+id/textView_Title"
-    tools:text="textView_SubTitle" />
+        android:id="@+id/textView_SubTitle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:textColor="@color/blackish"
+        android:textSize="16sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView_arrow_up"
+        app:layout_constraintEnd_toStartOf="@+id/imageView_arrow_up"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_Title"
+        tools:text="textView_SubTitle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 
