--- a/Project/line/app/src/main/res/drawable/bot_chat.xml
+++ b/Project/line/app/src/main/res/drawable/bot_chat.xml
@@ -6,5 +6,5 @@
         android:bottomRightRadius="15dp"
         android:topLeftRadius="0dp"
         android:topRightRadius="15dp"/>
-    <solid android:color="@color/teal_200"/>
+    <solid android:color="@color/chartGrey"/>
 </shape>
