--- a/Project/line/app/src/main/res/layout/bot_message_box.xml
+++ b/Project/line/app/src/main/res/layout/bot_message_box.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="4dp">
     <LinearLayout
-        android:id="@+id/chat_msg_layout"
+        android:id="@+id/bot_msg_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start|center_vertical"
