--- a/Project/line/app/src/main/res/layout/bottom_sheet.xml
+++ b/Project/line/app/src/main/res/layout/bottom_sheet.xml
@@ -40,7 +40,9 @@
             android:id="@+id/chat_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical" />
+            android:orientation="vertical" >
+
+        </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
     <FrameLayout
@@ -92,7 +94,7 @@
                 android:hint="Enter message"
                 android:inputType="text"
                 android:maxLines="1"
-                android:paddingLeft="15dp"
+                android:paddingRight="15dp"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:textColor="@color/black"
