--- a/Project/line/app/src/main/res/drawable/bot_chat.xml
+++ b/Project/line/app/src/main/res/drawable/bot_chat.xml
@@ -7,6 +7,5 @@
         android:topLeftRadius="0dp"
         android:topRightRadius="15dp"/>
     <padding android:left="2dp" android:top="10dp" android:right="2dp" android:bottom="10dp" />
-
-    <solid android:color="@color/chartGrey"/>
+    <solid android:color="@color/main"/>
 </shape>
