--- a/Project/line/app/src/main/res/drawable/button_background.xml
+++ b/Project/line/app/src/main/res/drawable/button_background.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@android:color/transparent"/>
-            <stroke android:width="1dp" android:color="@color/lightGrey"/>
+            <stroke android:width="2dp" android:color="@color/main"/>
             <corners android:radius="5dp"/>
             <!-- You can create different radius for different corners -->
             <padding android:left="10dp" android:top="1dp" android:right="10dp" android:bottom="10dp" />
