--- a/Project/line/app/src/main/res/drawable/edittext_background.xml
+++ b/Project/line/app/src/main/res/drawable/edittext_background.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@android:color/transparent"/>
-            <stroke android:width="1dp" android:color="@color/pink200"/>
+            <stroke android:width="1dp" android:color="@color/lightGrey"/>
             <corners android:radius="5dp"/>
             <!-- You can create different radius for different corners -->
             <!--corners
