--- a/Project/line/app/src/main/res/drawable/user_chat.xml
+++ b/Project/line/app/src/main/res/drawable/user_chat.xml
@@ -6,5 +6,5 @@
         android:bottomRightRadius="15dp"
         android:topLeftRadius="15dp"
         android:topRightRadius="0dp"/>
-    <solid android:color="@color/lavenderBlush"/>
+    <solid android:color="@color/lightGrey"/>
 </shape>
